# general_weights

./: .gitignore  README.md
backend/: pyproject.toml  run_server.sh
backend/apps/business/: admin.py  models.py  serializers.py  test_sock.py  urls.py  views.py  websok.py
backend/apps/business/migrations/: 0001_initial.py  0002_item.py  0003_alter_scale_port.py  0004_client.py  0005_alter_scale_port.py  0005_remove_scale_port.py
backend/apps/company/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/company/migrations/: 0001_initial.py  0002_systemsettings.py
backend/apps/tickets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tickets/migrations/: 0001_initial.py
backend/apps/users/: models.py  serializers.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/utils/: api_filters.py  parse_datetime.py  render_template.py
backend/apps/vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/vehicles/migrations/: 0001_initial.py  0002_driver_license_category_driver_license_expiry.py  0003_driver_status.py  0004_vehicle.py  0005_vehicle_driver_blockedvehicle.py  0006_alter_blockedvehicle_unblock_user.py  0007_alter_blockedvehicle_driver.py
backend/config/: .env  .env.example  asgi.py  settings.py  urls.py
backend/media/logo/: ac8458b9-67b2-420f-a98a-3f58f3cbd9d3.jfif
backend/templates/: print_format.html  response_ticket.json
backup/: GeneralWeighing.postman_collection.json  backup-30-06-2025.sql
frontend/: .env.example  index.html  package-lock.json  package.json  (+2 more)
(+56 files in other folders)
