[project]
name = "general-weights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "channels>=4.2.2",
    "daphne>=4.2.0",
    "dj-rest-auth>=7.0.1",
    "django>=5.2.3",
    "django-allauth>=65.9.0",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "reportlab>=4.4.2",
    "requests>=2.32.4",
    "rest-framework-simplejwt>=0.0.2",
    "serial>=0.0.97",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
    "whitenoise>=6.9.0",
    "xlsxwriter>=3.2.5",
]
